--- a/fileupload.html
+++ b/fileupload.html
@@ -14,7 +14,7 @@
         <div id="container">
             
             <header>
-                <img src="Images/ma.jpg" style="height:100px; margin-left:50px">
+                <img src="Images/logo1.png" style="height:100px; margin-left:50px">
                 <div class="nav">
                     <ul>
                         
