JavaScript code added

--- a/Encryption.html
+++ b/Encryption.html
@@ -176,6 +176,7 @@ function myFunction(){
             txt  += "<br>The path of the selected file: " + x.value; // If the browser does not support the files property, it will return the path of the selected file instead. 
         }
     }
+    var txt = txt.fontcolor("white");
     document.getElementById("demo").innerHTML = txt;
 }
 </script>
